Ensure global body allows horizontal scroll

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,7 +9,8 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: visible;
+  overflow-y: auto;
   font-family: $font-body;
   color: $black;
   background-color: $white;
